# Project4

./: CMakeLists.txt  motion_config.backup.json
config/: camera_config.json  camera_exposure_config.json  camera_to_object_offset.json  motion_config_devices.json  motion_config_graph.json  motion_config_positions.json  smu_config.json  vision_circle_params.json
src/: TestACSIdentification.cpp  TestConfigMain.cpp  TestMain.cpp  main.cpp
src/core/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  ConfigRegistry.cpp  ConfigRegistry.h  ServiceLocator.cpp  ServiceLocator.h  Window.cpp  Window.h
src/devices/: IDeviceManagerInterface.h  UniversalServices.h
src/devices/motions/: ACSController.cpp  ACSController.h  ACSControllerManagerStandardized.cpp  ACSControllerManagerStandardized.h  PIController.cpp  PIController.h  PIControllerManagerStandardized.cpp  PIControllerManagerStandardized.h
src/ui/: CleanMainUI.cpp  CleanMainUI.h  FontManager.cpp  FontManager.h  UIRenderer.cpp  UIRenderer.h
src/ui/services/: ServiceInitializer.h  UIServiceRegistry.h
src/ui/services/config/: ConfigService.h  SystemInfoService.h
src/ui/services/data/: CLD101xService.h  DataMonitorService.h  SMUService.h
src/ui/services/manual/: GantryService.h  IOControlService.h  PIControlService.h  PneumaticService.h
src/ui/services/program/: MacroService.h  ProgrammingService.h
src/ui/services/run/: ProcessSetupService.h  RunProductService.h
src/ui/services/vision/: DatumService.h  FiducialService.h  VisionService.h
src/utils/: Logger.cpp  Logger.h  LoggerAdapter.h  Unicode.cpp  Unicode.h
